feat: generate without persisted template
