# src/rest/model/index.ts
@@ -1,4 +1,5 @@
 export * from './user';
 export * from './github-installation';
 export * from './template';
+export * from './generate-with-persisted-template';
 export * from './generate-project-payload';
