# src/service/model/generate-project.ts
@@ -1,0 +1,13 @@
+export class GenerateProjectValue {
+  name: string;
+  value: string;
+}
+
+export class GenerateProject {
+  scope?: string;
+  templateUrl: string;
+  repositoryName: string;
+  installationId: string;
+  isPrivateRepository: boolean;
+  values: GenerateProjectValue[];
+}
